tests/snapshots/conformance__i_string_1st_valid_surrogate_2nd_invalid.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD888\u1234"]
stdout --- 
["\uD888\u1234"]
stderr --- 
<empty>
