tests/snapshots/conformance__i_string_incomplete_surrogate_pair.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uDd1ea"]
stdout --- 
["\uDd1ea"]
stderr --- 
<empty>
