tests/snapshots/conformance__i_string_invalid_lonely_surrogate.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\ud800"]
stdout --- 
["\ud800"]
stderr --- 
<empty>
