tests/snapshots/conformance__i_string_invalid_surrogate.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\ud800abc"]
stdout --- 
["\ud800abc"]
stderr --- 
<empty>
