tests/snapshots/conformance__i_string_inverted_surrogates_u+1d11e.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uDd1e\uD834"]
stdout --- 
["\uDd1e\uD834"]
stderr --- 
<empty>
