tests/snapshots/conformance__i_string_lone_second_surrogate.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uDFAA"]
stdout --- 
["\uDFAA"]
stderr --- 
<empty>
