tests/snapshots/conformance__i_string_lone_utf8_continuation_byte.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[91, 34, 129, 34, 93]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
